app/stylesheets/ui/wiki.scss
.wiki, .post {


  //
  // CODE BLOCKS
  //

  // http://longren.org/2006/09/27/wrapping-text-inside-pre-tags
  // Browser specific (not valid) styles to make preformatted text wrap
  pre {
    white-space: pre-wrap;
    white-space: -moz-pre-wrap;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    word-wrap: break-word;
    code {
      display: block;
      background: #fff6dd;
      border: solid 1px;
      border-color: #ffe8a9;
      padding: 0.5em;
    }
  }
  code {
    background-color: #fff6dd;
  }
  div.codetitle {
    background: #ffe8a9;
    color: #614b2a;
    padding: 0.25em;
    font-weight: bold;
  }

  //
  // HEADINGS
  //

  h1 {
    font-size: 24pt;
    line-height: 1.25em;
    color: #666666;
    border-bottom: 2px dotted #999999;
    font-family: $font_default_family;
    margin: 0.67em 0;
    &:first-child, &.first {
      margin-top: 0;
    }
  }
  h2 {
    font-size: 14pt;
    line-height: 1.25em;
    border-bottom: 1px dashed #cccccc;
    margin: 0.83em 0;
    &:first-child, &.first {
      margin-top: 0;
    }
  }
  h3 {
    font-size: 1.1em;
    margin: 0.75em 0;
  }

  //
  // BLOCKS
  //

  p {
    &.left {
      margin: 0;
      img {
        margin-right: 1em; } }
    &.right {
      margin: 0;
      img {
        margin-left: 1em;
      }
    }
  }

  //
  // INLINE
  //

  span.caps {
    font-size: 80%;
  }

}

.wiki {

  //
  // TABLES
  //

  table {
    border-collapse: collapse;
  }
  td {
    padding: 4px;
    border: 1px solid #cccccc;
  }
  th {
    padding: 4px;
    border: 1px solid #cccccc;
    background: #dddddd; }
  tr {
    &.odd {
      background-color: #f2f2f2;
    }
    &.even {
      background-color: white;
    }
  }


//  .wiki_section {
//    position: relative;
//    .editsection {
//      position: absolute;
//      right: 0;
//      top: 0;
//      //line-height= !body_text_line_height {}
//      text: {
//        transform: none;
//        decoration: none; };
//      font: {
//        //size= !body_text_font_size {}
//        variant: normal;
//        weight: normal;
//        style: normal;
//      };
//    }
//  }
}

.post {
  blockquote {
    border-left: 6px solid #dddddd;
    margin-left: 0;
    padding-left: 1.5em;
    font-style: italic;
  }
}

//
// WIKI DIFF
//

div.diff {
  p {
    margin: 0; } }

del {
  &.diffmod, &.diffins {
    color: #999999;
    background-color: #dddddd; } }

ins {
  &.diffmod, &.diffins {
    background-color: #ccffcc;
    text-decoration: none;
    color: black; } }

//
// WIKI EDITING
//

//div.formatting_reference {
//  margin-top: 0.5em;
//  float: right; }

//div.wiki_buttons {
//  margin-top: 0.5em;
//  input {
//    font-size: 1.25em;
//    padding: 0.1em 0.5em;
//    margin-right: 0.5em; } }

a.edit {
  font-size: $font_default_size;
  font-weight: normal;
  float: right;
//  display: inline;
//  margin-left: 6px;
//  opacity: 0;
//  //position: absolute
//  // a hack to make .small_icon_button work as inline
//  background-repeat: no-repeat;
//  background-position: 0 70%;
//  padding-left: 16px;
//  // end hack
}

//a.edit:hover {
//  opacity: 1 !important; }
//
//h1:hover a.edit,
//h2:hover a.edit,
//h3:hover a.edit {
//  opacity: 0.6; }

//
// WYSIWYG EDITOR
// Take care when changing this css, it is hard to get it to look ok in all browsers.
//

.html_editor_wrapper {
  border: 1px solid #666666; }

.htmlarea {
  border: 0 !important; }

.htmlarea .toolbar {
  border-right: 0;
  border-bottom: 1px solid #999999;
  background: #eeeeee;
  .button {
    background: #eeeeee;
    border-color: #eeeeee;
    &:hover {
      background: white; } } }

.htmlarea iframe {
  width: 100% !important;
  border: 0 !important;
  border-top: 1px solid #dddddd !important;
  &:focus {
    background-color: #ffffee; } }

.htmlarea .statusBar {
  border-left: 0 !important;
  background: #eeeeee; }

.statusBarWidgetContainer {
  display: none; }

//.html_editor_instance
//  padding: 4px
//  border-top: 1px solid #ddd
//  outline: 0
//  min-height: 10em
//  max-height: 30em
//  overflow-y: auto
//  cursor: text
//  &:focus
//    background-color: #ffe

//.html_editor_panel
//  border-bottom: 1px solid #666
//  border-top: 1px solid white

//.nicEdit-panelContain
//  border: 0 !important

//.nicEdit-selectContain
//  width: 120px !important

//.nicEdit-selectTxt
//  width: 90px !important

//.nicEdit-pane
//  h1
//    font-size: 1.55em
//  h2
//    font-size: 1.1em
//  h3
//    font-size: 1em
//  h4
//    font-size: 0.8em

//
// table of contents
//

a.anchor {
  opacity: 0;
  margin-left: 6px;
  text-decoration: none;
  font-size: 80%;
  &:hover {
    color: #666666 !important;
    text-decoration: none; } }

h1:hover a.anchor,
h2:hover a.anchor,
h3:hover a.anchor {
  opacity: 1;
  color: #aaaaaa;
}

ul.toc {
  display: table;
  background-color: #f9f9f9;
  border: 1px solid #e6e6e6;
  padding: 0.5em;
  margin: 0 0 0.5em 0;
  list-style-type: none;
  list-style-image: none;
  ul {
    list-style-type: none;
    list-style-image: none;
    padding-left: 1em;
  }
  span {
    padding-right: 0.3em;
  }
  li {
    font-size: 0.95em;
  }
}

